infras/k8s-yaml/cilium-policies/namespaces/10-monitoring.yaml

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kibana-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: kibana
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: ingress-nginx
    - matchLabels:
        app: oauth2-proxy
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: security
    toPorts:
    - ports:
      - port: "5601"
        protocol: TCP
